force-app/main/default/objects/XactlyExpress__XCTeamMember__c/XactlyExpress__XCTeamMember__c.object-meta.xml
<CustomObject>
    <label>XCTeamMember</label>
    <nameField>
        <label>XCTeam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCTeamMember</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>