force-app/main/default/objects/XactlyExpress__XCTeamMember__c/fields/XactlyExpress__GroupID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__GroupID__c</fullName>
    <label>GroupID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>