force-app/main/default/objects/XactlyExpress__XCTeamMember__c/fields/XactlyExpress__LeaderID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__LeaderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeaderID</label>
    <referenceTo>XactlyExpress__XCProfile__c</referenceTo>
    <relationshipLabel>TeamLeaderID</relationshipLabel>
    <relationshipName>TeamLeaderID</relationshipName>
    <type>Lookup</type>
</CustomField>