force-app/main/default/objects/XactlyExpress__XCTeamMember__c/fields/XactlyExpress__MemberPlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MemberPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberPlanID</label>
    <referenceTo>XactlyExpress__XCPlan__c</referenceTo>
    <relationshipLabel>XCTeamMember (MemberPlanID)</relationshipLabel>
    <relationshipName>XCTeamMember2</relationshipName>
    <type>Lookup</type>
</CustomField>