force-app/main/default/objects/XactlyExpress__XCTeamMember__c/fields/XactlyExpress__TeamID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TeamID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamID</label>
    <referenceTo>XactlyExpress__XCTeam__c</referenceTo>
    <relationshipLabel>XCTeamMember</relationshipLabel>
    <relationshipName>XCTeamMember</relationshipName>
    <type>Lookup</type>
</CustomField>